# Terrance

./: .clangd  .gitignore  compile_flags.txt  main  main.c  makefile  my_program  readme.md  step  step.c  step.h
ESP32-Serial-Communicator/: platformio.ini
ESP32-Serial-Communicator/src/: main.cpp
ESP32-StepperDriver/: platformio.ini
ESP32-StepperDriver/oldCode/: I2CSlave.cpp
ESP32-StepperDriver/src/: I2CSlave.cpp  I2CSlave.hpp  StepperMotor.cpp  StepperMotor.hpp  main.cpp
inc/: StepperController.hpp
install/: local_setup.sh  setup.sh
install/cpp_StepperController/share/cpp_StepperController/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cpp_StepperController/share/cpp_StepperController/cmake/: cpp_StepperControllerConfig.cmake
install/cpp_stepper_controller/lib/cpp_stepper_controller/: cpp_stepper_controller
install/cpp_stepper_controller/share/ament_index/resource_index/parent_prefix_path/: cpp_stepper_controller
install/cpp_stepper_controller/share/cpp_stepper_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/py_publisher/lib/py_publisher/: gamepad
install/py_publisher/share/py_publisher/: package.ps1  package.sh  package.zsh
log/: latest_build
scripts/: UDP_Test.py  ackermannTest.py  gamepad_server.py  i2cPythonTest.py  serialTest.py  windowsControllerScript.py
src/: StepperController.cpp  main.cpp
src/cpp_StepperController/: CMakeLists.txt
src/cpp_StepperController/src/: main.cpp
src/cpp_stepper_controller/: CMakeLists.txt
src/cpp_stepper_controller/include/: Ackermann.hpp  Controller.hpp  ControllerSubscriber.hpp  Gamepad.hpp  StepperController.hpp  pins.hpp
src/cpp_stepper_controller/src/: Ackermann.cpp  Controller.cpp  StepperController.cpp  cpp_stepper_controller.cpp  listener.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/cpp_stepper_controller/share/cpp_stepper_controller/: package.dsv  package.ps1  package.sh
src/log/: latest_build
src/py_publisher/: package.xml  setup.cfg  setup.py
src/py_publisher/install/: local_setup.sh  setup.sh
src/py_publisher/install/py_publisher/lib/py_publisher/: listener  talker
src/py_publisher/install/py_publisher/share/py_publisher/: package.bash  package.dsv  package.sh  package.xml
src/py_publisher/log/: latest_build
src/py_publisher/py_publisher/: gamepad.py
windows/: gamepad_server.py
